<resources>
    <string name="app_name">Unknown</string>
    <string name="login">Email</string>
    <string name="password">Пароль</string>
    <string name="register_now">Регистрация</string>
    <string name="login_in">Авторизация</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="sex">Пол:</string>
    <string name="man">М</string>
    <string name="women">Ж</string>
    <string name="age">Возраст:</string>
    <string name="back">Назад</string>
    <string name="height_optional">Рост:(необязательно)</string>
    <string name="height">Рост:</string>
    <string name="weight_optional">Вес:(необязательно)</string>
    <string name="weight">Вес:</string>
    <string name="local_optional">Местоположение:(необязательно)</string>
    <string name="local">Местоположение:</string>
    <string name="send">Отправка</string>
    <string name="start_a_dialogue">Начать диалог</string>
    <string name="chat_list">Сообщения</string>
    <string name="you_don_t_have_divlogs_yet">У вас ещё нет диалогов</string>
    <string name="edit_message">Сообщение</string>
    <string name="search">Поиск</string>
    <string name="sex_age">Пол/Возраст</string>
    <string name="height_weight_local">Рост/Вес/Местоположение</string>
    <string name="exit">Выход</string>
    <string name="id">Id: </string>
    <string name="unknow">\?</string>
    <string name="info_search_user">Введи параметры собеседника</string>
    <string name="age_optional">Возраст:(необязательно)</string>
    <string name="from">До</string>
    <string name="to">От</string>
    <string name="birthday">Дата рождения:</string>
    <string name="save">Сохранить</string>
    <string name="setting">Настройки</string>
    <string name="cm"> см</string>
    <string name="kg"> кг</string>
    <string name="style">Тема:</string>
    <string name="language">Язык:</string>
    <string name="ban">Пользователь забанен</string>
    <string name="edit">Редактировать</string>
    <string name="del">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="delete_for_everyone">Удалить для всех</string>
    <string name="camera">Камера</string>
    <string name="to_send">Отправить</string>
    <string name="add">Прикрепить файл</string>
    <string name="configuration_delete">Удалить для всех</string>
</resources>