<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/search_dialog_background"
    android:elevation="3dp"
    android:padding="10dp">

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:theme="@style/MyCheckBox"
        app:layout_constraintBottom_toTopOf="@id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        style="@style/textView"
        android:textSize="15sp"
        android:text="@string/delete_for_everyone"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox"
        app:layout_constraintStart_toEndOf="@+id/checkbox"
        app:layout_constraintTop_toTopOf="@+id/checkbox" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/background_button"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textColor="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/background_button"
        android:text="@string/del"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textColor="@color/button"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>